--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     z-index: 3;
 }
 
@@ -58,24 +57,10 @@ h1 {
     width: 120px;
     margin-right: 300px;
     margin-top: 100px;
-}
-.emptyDiv {
-    position: absolute;
-    background-color: #11ffee00;
-    display: block;
-    height: 10vh;
-    width: 20vh;
-    top:55%;
-    z-index: 2;
-    left: 40%;
+    margin-left: 260px;
 }
 
-.inputClass {
-  position: absolute;
-    z-index: 3;
-    bottom: 20px;
-    left: calc(50% - 90px);
-}
+
 .lock2 {
   height: 250px;
     width: 250px;
