--- a/index.html
+++ b/index.html
@@ -23,20 +23,16 @@ h1 {
     opacity: 75%;
 }
 .keyDiv{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     z-index: 3;
 }
 
 .lock {
-    height: 250px;
-    width: 250px;
+    height: 750px;
+    width: 750px;
     position: absolute;
     top: 50%;
-    left: calc(50% - 125px);
-    top: calc(50% - 125px);
+    left: calc(50% - 375px);
+    top: calc(50% - 375px);
     z-index: 1;
 
 }
@@ -53,21 +49,21 @@ h1 {
     margin-right: 300px;
     margin-top: 100px;
   */
-    height: 120px;
+  position: absolute;
+  height: 120px;
     width: 120px;
-    margin-right: 300px;
+    margin-right: 0px;
     margin-top: 100px;
-    margin-left: 260px;
 }
 
 
 .lock2 {
-  height: 250px;
-    width: 250px;
+    height: 750px;
+    width: 750px;
     position: absolute;
     top: 50%;
-    left: calc(50% - 125px);
-    top: calc(50% - 125px);
+    left: calc(50% - 375px);
+    top: calc(50% - 375px);
     z-index: 4;
 }
 
@@ -79,7 +75,6 @@ h1 {
 <div class="lockDiv">
     <img class="lock" src="./nouveau_lock.png" alt="lock">
     <img class="lock2" src="./nouveau_lock2.png" alt="lock">
-  </div>
 </div>
 <div class="inputClass" id="inputId">
     <input type="text" name="input" id="input" class="input" placeholder="Donne la bonne réponse chacal">
@@ -89,7 +84,8 @@ h1 {
 
 
 
-    <script>var canvas = document.getElementById( 'canvas' ),
+    <script>
+    var canvas = document.getElementById( 'canvas' ),
 		ctx = canvas.getContext( '2d' ),
     canvas2 = document.getElementById( 'canvas2' ),
 
