--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <div class="displayDiv rounded text-center mx-3 my-3" id="displayDiv">
     </div>
     <div class="keyDiv">
-      <img id="key" class="key" src="./Cle.png" alt="lock" style="border:5px solid red">
+      <img id="key" class="key" src="./Cle.png" alt="lock">
     </div>
     <div class="lockDiv">
       <img class="lock" src="./nouveau_lock.png" alt="lock">
       <img class="lock2" src="./nouveau_lock2.png" alt="lock">
-      <div class="emptyDiv" id="emptyDiv" style="border:5px solid blue"></div>
+      <div class="emptyDiv" id="emptyDiv"></div>
     </div>
 
     <canvas id="canvas">Canvas is not supported in your browser.</canvas>
